Tweaks, cleanup, and <h1> on canvas.html

--- a/a/head.html
+++ b/a/head.html
@@ -22,7 +22,7 @@
 		</div>
 		<div id="cont" style="visibility: hidden">
 			<nav id="nav">
-				<a id="logo" href="/" style="background: rgba(255, 255, 255, 0.9)">
+				<a id="logo" href="/" style="background: rgba(255, 255, 255, .9)">
 					<img src="/a/logo2.png" alt="DevDoodle" />
 					<div></div>
 				</a>
