--- a/dev/new/html.html
+++ b/dev/new/html.html
@@ -12,9 +12,8 @@
 <style>
 	*::-webkit-input-placeholder { color: #888 }
 	*::-moz-placeholder { color: #999 }
-	body, #content, #footer {
-		background: #000;
-	}
+	body, #content, #footer { background: #000 }
+	#content { padding-top: 0 }
 	a:hover {
 		color: #4ff;
 	}
