--- a/learn/learn.html
+++ b/learn/learn.html
@@ -29,10 +29,10 @@
 <style>
 	#courses { max-width: 1800px }
 	#courses > div {
-		background: rgba(16, 140, 255, 0.8);
-		transition: background 0.2s;
+		background: rgba(16, 140, 255, .8);
+		transition: background .2s;
 	}
-	#courses > div:hover { background: rgba(24, 160, 255, 0.8) }
+	#courses > div:hover { background: rgba(24, 160, 255, .8) }
 	#content a:hover { color: #333 }
 	#content a:active { color: #100 }
 	#courses img { border-radius: 4px }
