--- a/dev/new/canvas.html
+++ b/dev/new/canvas.html
@@ -1,3 +1,4 @@
+<h1>New Program <small><a id="restart">Restart</a> <line /> <a id="save">Save</a></small></h1>
 <div id="row" class="row">
 	<textarea id="code" placeholder="//code" spellcheck="false" autocapitalize="off" autocorrect="off">$code</textarea>
 	<iframe id="output" style="background-color: #fff" sandbox="allow-scripts allow-same-origin"></iframe>
@@ -5,9 +6,8 @@
 <style>
 	*::-webkit-input-placeholder { color: #888 }
 	*::-moz-placeholder { color: #999 }
-	body, #content, #footer {
-		background: #000;
-	}
+	body, #content, #footer { background: #000 }
+	#content { padding-top: 0 }
 	a:hover {
 		color: #4ff;
 	}
@@ -19,6 +19,7 @@
 	}
 	#code, #output {
 		width: 95%;
+		height: 500px;
 		outline: none;
 	}
 	#code {
@@ -27,20 +28,30 @@
 		font-family: monospace;
 		font-size: 1rem;
 		border: 1px solid #fff;
-		height: 500px;
 		resize: none;
 		white-space: nowrap;
+		margin-bottom: 8px;
 	}
-	#output {
-		height: 400px;
-	}
-	@media screen and (min-width: 700px) {
-		#row, #code, #output { height: 100% }
+	@media screen and (min-width: 650px) {
+		h1 {
+			height: 1.65rem;
+			margin-bottom: .35em;
+		}
+		#row { height: calc(100% - 2rem) }
+		#code, #output { height: 100% }
 		#code { width: 60% }
 		#output {
 			width: 39%;
 			float: right;
 		}
+	}
+	@media screen and (min-width: 650px) and (max-width: 800px) {
+		#code { width: 55% }
+		#output { width: 44% }
+	}
+	@media screen and (min-width: 1600px) {
+		#code { width: 65% }
+		#output { width: 34% }
 	}
 	#save.p {
 		cursor: progress;
@@ -129,30 +140,5 @@
 		}, 0, this);
 	});
 	run();
-	function save(fork) {
-		document.getElementById('save').classList.add('p');
-		request('../save.php', function(req) {
-			if (req.responseText != 'Saved Program') {
-				if (isNaN(req.responseText)) {
-					alert('Save error. Push save to try again.');
-				} else {
-					onbeforeunload = null;
-					window.location = '../'+req.responseText+'/';
-				}
-			} else {
-				onbeforeunload = null;
-				document.getElementById('updated').setAttribute('datetime', new Date().toISOString());
-			}
-			document.getElementById('save').classList.remove('p');
-			console.log(req.responseText);
-		}, 'id=$id'+(fork?'&amp;fork=1':'')+'&amp;code='+encodeURIComponent(document.getElementById('code').value));
-	};
-	function del() {
-		if (confirm('Are you sure you want to delete this?')) {
-			request('../del.php', function(req) {
-				console.log(req.responseText);
-				location = '';
-			}, 'id=$id');
-		}
-	};
+	document.getElementById('restart').onclick = run;
 </script>
