--- a/dev/new/new.html
+++ b/dev/new/new.html
@@ -12,12 +12,12 @@
 <style>
 	#ides { max-width: 1800px }
 	#ides a {
-		background: rgba(16, 140, 255, 0.8);
-		transition: background 0.2s;
+		background: rgba(16, 140, 255, .8);
+		transition: background .2s;
 		color: #000;
 		display: block;
 	}
-	#ides a:hover { background: rgba(24, 160, 255, 0.8) }
+	#ides a:hover { background: rgba(24, 160, 255, .8) }
 	#ides img {
 		background: #000;
 		padding: 4px;
