--- a/learn/web/basic-tags/1.html
+++ b/learn/web/basic-tags/1.html
@@ -4,7 +4,7 @@ Basic Tags
 		<div id="text-inner">
 			<h1>Basic Tags</h1>
 		</div>
-		<bl id="cntrls"><a href="../../" class="lft">Back</a><a href="../2/" class="rit">Next</a></bl>
+		<div id="cntrls"><a href="../../" class="lft">Back</a><a href="../2/" class="rit">Next</a></div>
 	</div>
 	<textarea id="html">&lt;!DOCTYPE html>
 &lt;html>
@@ -18,7 +18,7 @@ Basic Tags
 	<iframe id="output"></iframe>
 </div>
 <script>
-	var noPageOverflow = 520;
+	var footerOff = true, noPageOverflow = 520;
 	function run() {
 		document.getElementById('output').srcdoc = document.getElementById('html').value;
 	}
