--- a/learn/web/html-intro/4.html
+++ b/learn/web/html-intro/4.html
@@ -4,7 +4,7 @@ Intro to HTML recap
 		<div id="text-inner">
 			<h1>Intro to HTML</h1>
 			<h2>Recap</h2>
-			<bl>Congratulations! You now know what HTML is. Let's review:</bl>
+			<div>Congratulations! You now know what HTML is. Let's review:</div>
 			<ul>
 				<li>HTML stands for Hyper Text Markup Language - it's a language used to mark up text on the web.</li>
 				<li>HTML is used to provide formatting, layout, and a foundation for other web technologies.</li>
@@ -17,12 +17,12 @@ Intro to HTML recap
 &lt;/html></code>
 				</li>
 			</ul>
-			<bl>Next, we'll learn more about tags, and how to format text.</bl>
+			<div>Next, we'll learn more about tags, and how to format text.</div>
 			<form action="../../basic-tags/">
 				<button id="check" type="submit">Move on</button>
 			</form>
 		</div>
-		<bl id="cntrls"><a href="../3/" class="lft">Back</a></bl>
+		<div id="cntrls"><a href="../3/" class="lft">Back</a></div>
 	</div>
 	<textarea id="html">&lt;!DOCTYPE html>
 &lt;html>
@@ -32,7 +32,7 @@ Intro to HTML recap
 	<iframe id="output"></iframe>
 </div>
 <script>
-	var noPageOverflow = 520;
+	var footerOff = true, noPageOverflow = 520;
 	function run() {
 		document.getElementById('output').srcdoc = document.getElementById('html').value;
 	}
