--- a/learn/web/web.html
+++ b/learn/web/web.html
@@ -7,23 +7,23 @@
 				<a href="html-intro/">Intro to HTML</a>
 				<div class="description">Learn what HTML is and how to set up a basic page.</div>
 			</div>
-			<line class="cline"></line>
+			<line class="cline" />
 			<div class="course">
 				<a href="basic-tags/">Basic elements</a>
 				<div class="description">Create links, paragraphs, and images; emphasize content.</div>
 			</div>
-			<line class="cline"></line>
+			<line class="cline" />
 			<div class="course">
 				<a>Nesting</a>
 				<div class="description">Learn about the Document Object Model and XML trees to correctly nest elements.</div>
 			</div>
-			<line class="split"></line>
+			<line class="split" />
 			<div class="html-a-branch">
 				<div class="course">
 					<a>HTML Tables</a>
 					<div class="description">Learn how to properly use tables.</div>
 				</div>
-				<line class="cline"></line>
+				<line class="cline" />
 				<div class="course">
 					<a>Forms</a>
 					<div class="description">Learn how to create forms and input elements.</div>
@@ -35,36 +35,36 @@
 					<a>Intro to CSS</a>
 					<div class="description">Learn what Cascading Style Sheets are and how they're used.</div>
 				</div>
-				<line class="cline"></line>
+				<line class="cline" />
 				<div class="course">
 					<a>Basic Selectors</a>
 					<div class="description">Target specific elements, ids, and classes.</div>
 				</div>
-				<line class="split"></line>
+				<line class="split" />
 				<div class="css-color-branch">
 					<div class="course">
 						<a>CSS colors</a>
 						<div class="description">Set text and background colors in 3 ways.</div>
 					</div>
-					<line class="cline"></line>
-					<line class="cline"></line>
+					<line class="cline" />
+					<line class="cline" />
 					<div class="course">
 						<a>CSS gradients</a>
 						<div class="description">Make gradients and create a button.</div>
 					</div>
-					<line class="cline"></line>
-					<line class="cline"></line>
-					<line class="cline"></line>
+					<line class="cline" />
+					<line class="cline" />
+					<line class="cline" />
 					<div class="course">
 						<a>3D effects</a>
 						<div class="description">Round corners and create shadows.</div>
 					</div>
-					<line class="cline"></line>
+					<line class="cline" />
 					<div class="course">
 						<a>Transitions</a>
 						<div class="description">Create fluid transitions for properties.</div>
 					</div>
-					<line class="cline"></line>
+					<line class="cline" />
 					<div class="course">
 						<a>Animations</a>
 						<div class="description">Create fluid animations that can run automatically.</div>
@@ -75,19 +75,19 @@
 						<a>Box model</a>
 						<div class="description">Space out elements by applying the box model.</div>
 					</div>
-					<line class="cline"></line>
-					<line class="left-down"></line>
+					<line class="cline" />
+					<line class="left-down" />
 					<div class="course box-events">
 						<a>Box types</a>
 						<div class="description">Learn the difference between inline and block elements, then explore inline-block and its use cases.</div>
 					</div>
-					<line class="cline"></line>
+					<line class="cline" />
 					<div class="course">
 						<a>Floats</a>
 						<div class="description">Move elements out of the "normal flow" to the right or left - then "clear" them.</div>
 					</div>
-					<line class="cline"></line>
-					<line class="left-down"></line>
+					<line class="cline" />
+					<line class="left-down" />
 					<div class="course">
 						<a>Positioning</a>
 						<div class="description">Position elements in relation to the parent, window, or normal flow; control overlapping elements.</div>
@@ -95,24 +95,24 @@
 				</div>
 			</div>
 			<div class="css-selectors-branch">
-				<line class="cline"></line>
-				<line class="cline"></line>
+				<line class="cline" />
+				<line class="cline" />
 				<div class="course">
 					<a>Relation selectors</a>
 					<div class="description">Traverse the DOM tree with CSS selectors by selecting children, decendants, and next sibilngs.</div>
 				</div>
-				<line class="cline"></line>
+				<line class="cline" />
 				<div class="course">
 					<a>Pseudo-classes</a>
 					<div class="description">Target hovered elements, active elements, focused elements and more.</div>
 				</div>
-				<line class="cline"></line>
+				<line class="cline" />
 				<div class="course">
 					<a>Pseudo-elements</a>
 					<div class="description">Create content with CSS, style first letters and lines, and make a CSS triangle.</div>
 				</div>
 			</div>
-			<line class="cline media-queries clear"></line>
+			<line class="cline media-queries clear" />
 			<div class="course">
 				<a>Media Queries</a>
 				<div class="description">Apply special CSS for specific devices, sizes, or orientations.</div>
@@ -123,26 +123,26 @@
 				<a>Intro to JavaScript</a>
 				<div class="description">Work with a JavaScript command line to learn basic string and arithmetic operators</div>
 			</div>
-			<line class="cline"></line>
+			<line class="cline" />
 			<div class="course">
 				<a>Data types</a>
 				<div class="description">Learn about Javascript datatypes (numbers, strings, and arrays).</div>
 			</div>
-			<line class="split"></line>
+			<line class="split" />
 			<div class="js-data-branch">
-				<line class="cline"></line>
-				<line class="right-down"></line>
+				<line class="cline" />
+				<line class="right-down" />
 				<div class="course">
 					<a>Functions</a>
 					<div class="description">Put your code in a handy function.</div>
 				</div>
-				<line class="cline"></line>
+				<line class="cline" />
 				<div class="course">
 					<a>Objects</a>
 					<div class="description">Create key-value pairs with Objects.</div>
 				</div>
-				<line class="cline"></line>
-				<line class="right-down"></line>
+				<line class="cline" />
+				<line class="right-down" />
 				<div class="course">
 					<a>Conversion</a>
 					<div class="description">Convert from one type to another.</div>
@@ -153,12 +153,12 @@
 					<a>control structures</a>
 					<div class="description">Use if, else if, and else blocks.</div>
 				</div>
-				<line class="cline"></line>
+				<line class="cline" />
 				<div class="course">
 					<a>Looping</a>
 					<div class="description">Use for, while, and foreach loops.</div>
 				</div>
-				<line class="looping-elements"></line>
+				<line class="looping-elements" />
 			</div>
 			<div class="course js-b clear">
 				<a>User input</a>
@@ -168,25 +168,25 @@
 				<a>Manipulate CSS</a>
 				<div class="description">Play with CSS - using Javascript.</div>
 			</div>
-			<line class="cline bump-up"></line>
+			<line class="cline bump-up" />
 			<div class="course">
 				<a>Loop thru elements</a>
 				<div class="description">Learn about NodeLists and how to loop thru elements.</div>
 			</div>
-			<line class="cline"></line>
+			<line class="cline" />
 			<div class="course">
 				<a>Events</a>
 				<div class="description">Run functions when events happen using addEventListener().</div>
 			</div>
-			<line class="split"></line>
+			<line class="split" />
 			<div class="ajax-branch">
-				<line class="cline"></line>
+				<line class="cline" />
 				<div class="course">
 					<a>Intro to Ajax</a>
 					<div class="description">Learn about partial page refreshing and requesting data.</div>
 				</div>
-				<line class="cline"></line>
-				<line class="cline"></line>
+				<line class="cline" />
+				<line class="cline" />
 				<div class="course ajax-form">
 					<a>Ajax form</a>
 					<div class="description">Create a form that submits with Ajax.</div>
@@ -197,7 +197,7 @@
 					<a>Event Propagation</a>
 					<div class="description">Learn about event propagation/bubbling and canceling it.</div>
 				</div>
-				<line class="cline"></line>
+				<line class="cline" />
 				<div class="course">
 					<a>Default action</a>
 					<div class="description">Learn about default browser action and canceling it.</div>
@@ -210,7 +210,7 @@
 	#tree {
 		overflow-x: scroll;
 		height: 600px;
-		background: rgba(255, 255, 255, 0.5);
+		background: rgba(255, 255, 255, .5);
 	}
 	#tree-inner {
 		width: 1200px;
@@ -262,8 +262,8 @@
 		font-size: 18px;
 		line-height: 16px;
 		min-width: 120px;
-		box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
-		transition: box-shadow 0.3s, background-color 0.3s;
+		box-shadow: 1px 1px 1px rgba(0, 0, 0, .3);
+		transition: box-shadow .3s, background-color .3s;
 		font-weight: normal;
 	}
 	#tree-inner .course .description {
@@ -279,13 +279,13 @@
 		font-size: 14px;
 		line-height: 16px;
 		opacity: 0;
-		transition: opacity 0.7s;
-		box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+		transition: opacity .7s;
+		box-shadow: 1px 1px 2px rgba(0, 0, 0, .4);
 		text-align: left;
 		white-space: normal;
 	}
 	#tree-inner .course:hover a {
-		box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+		box-shadow: 1px 1px 2px rgba(0, 0, 0, .4);
 		background: #4cf;
 		color: #333;
 	}
