--- a/dev/new.html
+++ b/dev/new.html
@@ -2,11 +2,11 @@
 <div id="ides" class="row bumar">
 	<a href="canvas" class="half pad br">
 		<h2>Canvas</h2>
-		<img src="canvas.png" />
+		<img src="../canvas.png" />
 	</a>
 	<a href="html" class="half pad br">
 		<h2>HTML</h2>
-		<img src="html.png" />
+		<img src="../html.png" />
 	</a>
 </div>
 <style>
