--- a/a/head.html
+++ b/a/head.html
@@ -38,7 +38,7 @@
 				<a href="/chat/">Chat</a>
 				<a href="/login/">Login</a>
 				<a href="/mod/">Mod</a>
-				<form action="/search/" class="ib"><input type="text" name="q" value="$search" style="line-height: 16px;" placeholder="Search this site" /></form>
+				<form action="/search/"><input type="text" name="q" value="$search" style="line-height: 16px;" placeholder="Search this site" /></form>
 				<div></div>
 			</nav>
 			<div id="content">
