Enhancements, fixes, mobile

--- a/dev/canvas.html
+++ b/dev/canvas.html
@@ -1,6 +1,6 @@
 <h1>$title <small><a id="restart">Restart</a> <line /> <a id="save">Save</a></small></h1>
 <div id="row" class="row">
-	<textarea id="code" placeholder="//code" spellcheck="false" autocapitalize="off" autocorrect="off">$code</textarea>
+	<textarea id="code" placeholder="//code" spellcheck="false" autocapitalize="off" autocorrect="off" wrap="off">$code</textarea>
 	<iframe id="output" sandbox="allow-scripts allow-same-origin"></iframe>
 </div>
 <style>
@@ -29,10 +29,9 @@
 		font-size: 1rem;
 		border: 1px solid #fff;
 		resize: none;
-		white-space: pre;
 		margin-bottom: 8px;
 	}
-	@media screen and (min-width: 650px) {
+	@media (min-width: 650px) {
 		h1 {
 			height: 1.65rem;
 			margin-bottom: .35em;
@@ -45,11 +44,11 @@
 			float: right;
 		}
 	}
-	@media screen and (min-width: 650px) and (max-width: 800px) {
+	@media (min-width: 650px) and (max-width: 800px) {
 		#code { width: 55% }
 		#output { width: 44% }
 	}
-	@media screen and (min-width: 1600px) {
+	@media (min-width: 1600px) {
 		#code { width: 65% }
 		#output { width: 34% }
 	}
@@ -107,7 +106,7 @@
 		document.getElementById('output').srcdoc = createCode();
 		outputWindow = document.getElementById('output').contentWindow;
 	};
-	if (navigator.userAgent.indexOf('Mobile') === -1) {
+	if (navigator.userAgent.indexOf('Mobile') == -1) {
 		addEventListener('mousemove',function(e) {
 			try {
 				var cRect = outputWindow.canvas.getBoundingClientRect(), iRect = document.getElementById('output').getBoundingClientRect();
@@ -116,11 +115,11 @@
 				outputWindow.mouseX = outputWindow.mouseX.bound(0,outputWindow.width);
 				outputWindow.mouseY = outputWindow.mouseY.bound(0,outputWindow.height);
 			} catch(e) {}
-		},false);
+		});
 		addEventListener('mouseup', function() {
 			outputWindow.mousePressed = false;
-		},false);
-	};
+		});
+	}
 	var oldValue = document.getElementById('code').innerHTML;
 	function handleCode() {
 		if (this.value !== oldValue) {
@@ -132,9 +131,10 @@
 			run();
 		}
 	};
-	document.getElementById('code').addEventListener('keyup', handleCode);
-	document.getElementById('code').addEventListener('keydown', handleCode);
-	document.getElementById('code').addEventListener('keypress', function() {
+	var code = document.getElementById('code');
+	code.addEventListener('keyup', handleCode);
+	code.addEventListener('keydown', handleCode);
+	code.addEventListener('keypress', function() {
 		setTimeout(function(t) {
 			handleCode.call(t);
 		}, 0, this);
@@ -142,23 +142,45 @@
 	run();
 	document.getElementById('restart').onclick = run;
 	document.getElementById('save').onclick = function() {
-		if (document.getElementById('save').classList.contains('progress')) return;
-		document.getElementById('save').classList.add('progress');
-		document.getElementById('save').textContent = 'Saving...';
+		var e = this;
+		if (e.classList.contains('progress')) return;
+		e.classList.add('progress');
+		setTimeout(function() {
+			if (e.textContent == 'Save') e.textContent = 'Saving…';
+		}, 200);
 		request('/api/program/save?type=1', function(res) {
 			if (res.indexOf('Error') === 0) {
-				document.getElementById('save').textContent = 'Save';
+				e.textContent = 'Try again?';
 				alert(res);
-			}
-			else if (res.indexOf('Location') === 0) {
+			} else if (res.indexOf('Location') === 0) {
 				onbeforeunload = null;
 				location.href = res.split(' ')[1];
 			} else if (res == 'Success') {
 				onbeforeunload = null;
-				document.getElementById('save').textContent = 'Saved';
-			}
-			else alert('Unknown error. Response was: ' + res);
-			document.getElementById('save').classList.remove('progress');
+				e.textContent = 'Saved';
+			} else alert('Unknown error. Response was: ' + res);
+			e.classList.remove('progress');
+		}, 'code=' + encodeURIComponent(document.getElementById('code').value));
+	};
+	(document.getElementById('fork') || {}).onclick = function() {
+		var e = this;
+		if (e.classList.contains('progress')) return;
+		e.classList.add('progress');
+		e.textContent = 'Saving…';
+		var e = e.previousSibling.previousSibling;
+		e.hidden = e.previousSibling.previousSibling.hidden = true;
+		request('/api/program/save?type=1&amp;fork=1', function(res) {
+			if (res.indexOf('Error') === 0) {
+				e.hidden = false;
+				e = e.nextSibling.nextSibling;
+				e.hidden = false;
+				e.nextSibling.nextSibling.textContent = 'Fork';
+				alert(res);
+			} else if (res.indexOf('Location') === 0) {
+				onbeforeunload = null;
+				location.href = res.split(' ')[1];
+			} else alert('Unknown error. Response was: ' + res);
+			e.classList.remove('progress');
 		}, 'code=' + encodeURIComponent(document.getElementById('code').value));
 	};
 </script>
