--- a/dev/html.html
+++ b/dev/html.html
@@ -46,7 +46,7 @@
 	#right {
 		height: 400px
 	}
-	@media screen and (min-width: 700px) {
+	@media (min-width: 700px) {
 		.row { height: 100% }
 		#left, #right {
 			height: 100%;
