--- a/dev/html.html
+++ b/dev/html.html
@@ -1,12 +1,13 @@
+<h1><span id="title">$title</span> <input type="text" id="edit-title" hidden="" value="$title" />  <small><a id="save">Save</a></small></h1>
 <div class="row">
-	<div id="right" class="half rit">
-		<iframe id="output"></iframe>
-		<button onclick="run()">Restart</button><span class="rit"><input id="autorun" type="checkbox" checked="" /> <label for="autorun">Autorun</label></span>
+	<div id="right" class="half">
+		<iframe id="output" sandbox="allow-scripts"></iframe>
+		<button onclick="run(1)">Restart</button><span class="rit"><input id="autorun" type="checkbox" checked="" /> <label for="autorun">Autorun</label></span>
 	</div>
 	<div id="left" class="half">
-		<textarea id="html" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="HTML"></textarea>
-		<textarea id="css" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="CSS"></textarea>
-		<textarea id="js" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="JS"></textarea>
+		<textarea id="html" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="HTML" wrap="off">$html</textarea>
+		<textarea id="css" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="CSS" wrap="off">$css</textarea>
+		<textarea id="js" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="JS" wrap="off">$js</textarea>
 	</div>
 </div>
 <style>
@@ -47,17 +48,14 @@
 		height: 400px
 	}
 	@media (min-width: 700px) {
-		.row { height: 100% }
+		.row { height: calc(100% - 2em) }
 		#left, #right {
 			height: 100%;
 			margin-bottom: 0;
 			max-width: 50%;
 		}
-	}
-	#save.p {
-		cursor: progress;
-		pointer-events: none;
-		color: #000;
+		#left { float: left }
+		#right { float: right }
 	}
 	iframe {
 		width: 100%;
@@ -68,15 +66,24 @@
 		height: calc(33.33% - 2px);
 		resize: none;
 	}
+	#save.progress {
+		cursor: progress;
+		color: #4ff;
+	}
 </style>
 <script>
 	var footerOff = true, noPageOverflow = 400;
 	var p = '';
 	function createCode() {
-		return '&lt;!DOCTYPE html>&lt;html>&lt;body>'+document.getElementById('html').value+'&lt;style>'+document.getElementById('css').value+'&lt;/style>&lt;script>'+document.getElementById('js').value+'&lt;/script>&lt;/body>&lt;/html>';
+		return '&lt;!DOCTYPE html>&lt;html>&lt;body>' + document.getElementById('html').value + '&lt;style>' + document.getElementById('css').value + '&lt;/style>&lt;script>alert=prompt=confirm=null;' + document.getElementById('js').value + '&lt;/script>&lt;/body>&lt;/html>';
 	}
 	function run(f) {
 		if (f == true || (p != createCode() &amp;&amp; document.getElementById('autorun').checked)) {
+			if (f &amp;&amp; f != true) {
+				onbeforeunload = function() {
+					return 'You have unsaved code.';
+				};
+			}
 			p = document.getElementById('output').srcdoc = createCode();
 		}
 	}
@@ -89,7 +96,7 @@
 			this.selectionEnd = this.selectionStart;
 			e.preventDefault();
 		}
-		setTimeout(run, 0);
+		setTimeout(run, 0, 2);
 	};
 	document.getElementById('css').onkeypress = document.getElementById('js').onkeypress = function(e) {
 		if (e.keyCode === 13) {
@@ -100,8 +107,76 @@
 			this.selectionEnd = this.selectionStart;
 			e.preventDefault();
 		}
-		setTimeout(run, 0);
+		setTimeout(run, 0, 2);
 	};
 	document.getElementById('html').onkeydown = document.getElementById('html').onkeyup = document.getElementById('css').onkeydown = document.getElementById('css').onkeyup = document.getElementById('js').onkeydown = document.getElementById('js').onkeyup = run;
 	run();
+	document.getElementById('save').onclick = function() {
+		var e = this;
+		if (e.classList.contains('progress')) return;
+		e.classList.add('progress');
+		setTimeout(function() {
+			if (e.textContent == 'Save') e.textContent = 'Saving…';
+		}, 200);
+		request('/api/program/save?type=2', function(res) {
+			if (res.indexOf('Error') === 0) {
+				e.textContent = 'Retry?';
+				alert(res);
+			} else if (res.indexOf('Location') === 0) {
+				onbeforeunload = null;
+				location.href = res.split(' ')[1];
+			} else if (res == 'Success') {
+				onbeforeunload = null;
+				e.textContent = 'Saved';
+			} else alert('Unknown error. Response was: ' + res);
+			e.classList.remove('progress');
+		}, 'html=' + encodeURIComponent(document.getElementById('html').value) + '&amp;css=' + encodeURIComponent(document.getElementById('css').value) + '&amp;js=' + encodeURIComponent(document.getElementById('js').value));
+	};
+	(document.getElementById('fork') || {}).onclick = function() {
+		var e = this;
+		if (e.classList.contains('progress')) return;
+		e.classList.add('progress');
+		e.textContent = 'Saving…';
+		var e = e.previousSibling.previousSibling;
+		e.hidden = e.previousSibling.previousSibling.hidden = true;
+		request('/api/program/save?type=1&amp;fork=1', function(res) {
+			if (res.indexOf('Error') === 0) {
+				e.hidden = false;
+				e = e.nextSibling.nextSibling;
+				e.hidden = false;
+				e.nextSibling.nextSibling.textContent = 'Fork';
+				alert(res);
+			} else if (res.indexOf('Location') === 0) {
+				onbeforeunload = null;
+				location.href = res.split(' ')[1];
+			} else alert('Unknown error. Response was: ' + res);
+			e.classList.remove('progress');
+		}, 'html=' + encodeURIComponent(document.getElementById('html').value) + '&amp;css=' + encodeURIComponent(document.getElementById('css').value) + '&amp;js=' + encodeURIComponent(document.getElementById('js').value));
+	};
+	document.getElementById('title').onclick = function() {
+		this.hidden = true;
+		var edit = document.getElementById('edit-title');
+		edit.hidden = false;
+		edit.focus();
+	};
+	document.getElementById('edit-title').onblur = function() {
+		request('/api/program/edit-title', function(res) {
+			var edit = document.getElementById('edit-title');
+			if (res.indexOf('Error') === 0) {
+				if (confirm(res + '\n\nRetry?')) edit.onblur();
+				else {
+					edit.hidden = true;
+					document.getElementById('title').hidden = false;
+				}
+			} else if (res == 'Success') {
+				edit.hidden = true;
+				var title = document.getElementById('title');
+				title.textContent = edit.value.substr(0, 92);
+				title.hidden = false;
+			} else alert('Unknown error. Response was: ' + res);
+		}, 'title=' + encodeURIComponent(this.value));
+	};
+	document.getElementById('edit-title').onkeypress = function(e) {
+		if (e.keyCode == 13) this.onblur.call(this);
+	};
 </script>
