Fixed Safari bug where autofocus didn't work

--- a/a/head.html
+++ b/a/head.html
@@ -12,15 +12,15 @@
 		<title>$title</title>
 	</head>
 	<body>
-		<div id="err" style="text-align: center; margin: 12em 3em; color: #fff;">
+		<div id="err">
 			<!--[if IE]>
-				This site does not support Microsoft Internet Explorer due to its lack of compatibility with web specifications.</p><p>Please use a modern browser such as <a href="//chrome.google.com/">Chrome</a> to view this site.
+				<p>This site does not support Microsoft Internet Explorer due to its lack of compatibility with web specifications.</p><p>Please use a modern browser such as <a href="//chrome.google.com/">Chrome</a> to view this site.</p>
 			<![endif]-->
 			<!--[if !IE]> -->
 				<noscript>Your JavaScript is disabled. Please enable JavaScript to view this site.</noscript>
 			<!-- <![endif]-->
 		</div>
-		<div id="cont" style="visibility: hidden">
+		<div id="cont">
 			<nav id="nav">
 				<a id="logo" href="/" style="background: rgba(255, 255, 255, .9)">
 					<img src="/a/logo2.png" alt="DevDoodle" />
