Shortened: Would you like to reload? -> Reload?

--- a/chat/room.html
+++ b/chat/room.html
@@ -148,7 +148,7 @@
 		}
 	};
 	socket.onclose = function() {
-		if (confirm('Connection error. Would you like to reload?')) {
+		if (confirm('Connection error. Reload?')) {
 			location.reload();
 		}
 	};
