--- a/dev/canvas.html
+++ b/dev/canvas.html
@@ -19,24 +19,23 @@
 		<svg id="dn" xmlns="http://www.w3.org/2000/svg"><polygon points="11,23 1,1 21,1"></polygon></svg>
 		<svg id="fl" xmlns="http://www.w3.org/2000/svg"><polygon points="1,1 19,1 19,11 5,11 5,23 1,23"></polygon></svg>
 	</div>
+	<div id="comments" class="umar">$comments</div>
+	<form id="comment" class="target umar">
+		<textarea id="commentta" placeholder="Ask for clarification or suggest improvements." style="width: 100%" rows="4"></textarea>
+		<button type="submit">Post</button>
+		<button type="reset" id="reset">Cancel</button>
+	</form>
+	<a id="addcomment" href="#comment" style="font-weight: normal" class="grey ib umar">Add comment</a>
 </section>
 <style>
 	*::-webkit-input-placeholder { color: #888 }
 	*::-moz-placeholder { color: #999 }
 	body, #content, #footer, #main { background: #000 }
 	#content { padding-top: 0 }
-	a:hover {
-		color: #4ff;
-	}
-	a:active {
-		color: #06f;
-	}
-	#main :not(input):not(button), #footer * {
-		color: #fff;
-	}
-	#main {
-		clear: both;
-	}
+	#main a:hover { color: #4ff }
+	#main a:active { color: #06f }
+	#main :not(input):not(button), #footer * { color: #fff }
+	#main { clear: both }
 	#meta {
 		clear: both;
 		padding: 4px;
@@ -115,32 +114,7 @@
 		transition: fill 0.1s;
 		fill: #c00;
 	}
-	.comment {
-		margin-top: 3px;
-		padding: 4px;
-	}
-	.comment #up, .comment #dn {
-		width: 18px;
-	}
-	.comment .hover {
-		float: left;
-		opacity: 0.3;
-		padding: 2px 2px 0 0;
-		height: 16px;
-	}
-	.comment .hover * {
-		margin: 0;
-	}
-	.comment:hover .hover {
-		opacity: 1;
-	}
-	.comment .rit {
-		color: #666;
-		font-size: 0.9em;
-	}
-	#comment:target + #addcomment {
-		display: none;
-	}
+	#comment:target + #addcomment { display: none }
 </style>
 <script>
 	var footerOff = true,
@@ -193,8 +167,8 @@
 		}, 200);
 		request('/api/program/save?type=1', function(res) {
 			if (res.indexOf('Error') === 0) {
-				e.textContent = 'Retry?';
 				alert(res);
+				e.textContent = 'Save';
 			} else if (res.indexOf('Location') === 0) {
 				onbeforeunload = null;
 				location.href = res.split(' ')[1];
@@ -237,11 +211,8 @@
 		request('/api/program/edit-title', function(res) {
 			var edit = document.getElementById('edit-title');
 			if (res.indexOf('Error') == 0) {
-				if (confirm(res + '\n\nRetry?')) edit.onblur();
-				else {
-					edit.hidden = true;
-					document.getElementById('title').hidden = false;
-				}
+				alert(res);
+				edit.value = document.getElementById('title').textContent;
 			} else if (res == 'Success') {
 				edit.hidden = true;
 				var title = document.getElementById('title');
@@ -255,9 +226,8 @@
 	};
 	document.getElementById('up').onclick = function() {
 		request('/api/program/vote', function(res) {
-			if (res.indexOf('Error') == 0) {
-				if (confirm(res + '\n\nRetry?')) document.getElementById('up').onclick();
-			} else if (res == 'Success') {
+			if (res.indexOf('Error') == 0) alert(res);
+			else if (res == 'Success') {
 				document.getElementById('up').classList.toggle('clkd');
 				document.getElementById('dn').classList.remove('clkd');
 			} else alert('Unknown error. Response was: ' + res);
@@ -265,12 +235,55 @@
 	};
 	document.getElementById('dn').onclick = function() {
 		request('/api/program/vote', function(res) {
-			if (res.indexOf('Error') == 0) {
-				if (confirm(res + '\n\nRetry?')) document.getElementById('up').onclick();
-			} else if (res == 'Success') {
+			if (res.indexOf('Error') == 0) alert(res);
+			else if (res == 'Success') {
 				document.getElementById('dn').classList.toggle('clkd');
 				document.getElementById('up').classList.remove('clkd');
 			} else alert('Unknown error. Response was: ' + res);
 		}, 'val=' + (this.classList.contains('clkd') ? 0 : -1));
+	};
+	document.getElementById('addcomment').onclick = function() {
+		setTimeout(function() {
+			document.getElementById('commentta').focus();
+		}, 0);
+	};
+	var socket = new WebSocket('ws://localhost:8125/dev/$id');
+	document.getElementById('comment').onsubmit = function(e) {
+		socket.send(JSON.stringify({
+			event: 'post',
+			body: document.getElementById('commentta').value
+		}));
+		document.getElementById('commentta').value = '';
+		document.getElementById('reset').onclick();
+		e.preventDefault();
+	};
+	document.getElementById('reset').onclick = function() {
+		location.hash = '';
+		history.replaceState('', document.title, window.location.pathname);
+		document.body.scrollTop = innerHeight;
+	};
+	socket.onmessage = function(e) {
+		console.log(e.data);
+		try {
+			var data = JSON.parse(e.data);
+		} catch(err) {
+			console.log(err);
+			return alert('JSON Error. Response was: ' + e.data);
+		}
+		if (data.event == 'add') {
+			var div = document.createElement('div');
+			div.classList.add('comment');
+			div.textContent = data.body;
+			var sig = document.createElement('span');
+			sig.classList.add('c-sig');
+			sig.textContent = '-' + data.user + ', ';
+			var permalink = document.createElement('a');
+			if (!data.time) data.time = new Date().getTime();
+			permalink.appendChild(agot(data.time));
+			permalink.href = '#' + (div.id = 'c' + data.id);
+			sig.appendChild(permalink);
+			div.appendChild(sig);
+			document.getElementById('comments').appendChild(div);
+		} else if (data.event == 'err') alert('Error: ' + data.body);
 	};
 </script>
